# llvm-tricore

./: CMakeLists.txt  README.md  configure
include/llvm/ADT/: Triple.h
include/llvm/MC/: MCExpr.h
lib/MC/: MCExpr.cpp
lib/Support/: Triple.cpp
lib/Transforms/Hello/build-Hello/: CMakeCache.txt
lib/build-Target/: CMakeCache.txt
